--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
-/pholser-jopt-simple-jopt-simple-3.3-0-g59a05aa.tar.gz
 /jopt-simple-4.5.tar.gz
+/jopt-simple-4.6.tar.gz
+/jopt-simple-jopt-simple-*/
+/noarch
+/*.src.rpm
+/.build-*.log
+/.project
